2013-08-07  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (prepare_menu_bars): Don't call x_consider_frame_title
	for TTY frames that are not the top frame on their console.
	(Bug#14616)

2013-08-07  Martin Rudalics  <rudalics@gmx.at>

	* w32term.c (w32fullscreen_hook): Really maximize frame when
	asked for (Bug#14841).

2013-08-07  Dmitry Antipov  <dmantipov@yandex.ru>

	Prefer selected_window to Fselected_window, likewise for frames.
	* buffer.c (Fbuffer_swap_text):
	* data.c (Fvariable_binding_locus):
	* window.c (run_window_configuration_change_hook): Adjust users.
	* w16select.c (Fw16_set_clipboard_data, Fw16_get_clipboard_data):
	Use decode_live_frame.

2013-08-07  Dmitry Antipov  <dmantipov@yandex.ru>

	Be more careful if selected window shows the buffer other than current,
	use window_outdated only if this is not so.  This change should also
	address some weird issues discussed in Bug#13012.
	* window.h (window_outdated): New prototype.
	* window.c (window_outdated): Now here.  Convert from static and
	always assume window's buffer.
	(Fwindow_end, Fwindow_line_height): Use it.
	* xdisp.c (reconsider_clip_changes): Remove prototype, drop 2nd arg
	and always assume window's buffer.
	(redisplay_window): Adjust user.
	(redisplay_internal): Call to reconsider_clip_change once and
	check whether mode line should be updated only if selected window
	shows current buffer.
	(run_window_scroll_functions): Use eassert for debugging check.
	(Fmove_point_visually, note_mouse_highlight): Use window_outdated.

2013-08-06  Dmitry Antipov  <dmantipov@yandex.ru>

	* window.c (window_scroll, window_scroll_pixel_based)
	(window_scroll_line_based): Use bool for booleans.

2013-08-06  Paul Eggert  <eggert@cs.ucla.edu>

	* process.c: Fix minor off-by-one issues in descriptor counts.
	This shouldn't fix any real bugs, but it cleans up the code a bit.
	(max_process_desc, max_input_desc): -1, not 0, means none.
	All uses changed.
	(delete_input_desc): New function.